# truetrail

./: .env.example  .gitignore  Dockerfile  compose.yml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 7609860750f5_initial_migration.py
src/: config.py  main.py
src/db/: database.py
src/models/: activity.py  service.py  user.py
src/models/schemas/: activity.py  user.py
src/routes/: activities.py  users.py
