[project]
name = "truetrail"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "sqlmodel>=0.0.24",
]
